# fls-pilot

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  glama.json  mkdocs.yml  pyproject.toml  requirements-docs.txt  server.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: api_probe.yml  bug_report.md  bug_report.yml  config.yml  documentation_problem.yml  feature_request.md  feature_request.yml  fl_build_compatibility.md  fl_build_compatibility.yml  setup_problem.yml  workflow_request.md  workflow_request.yml
.github/workflows/: ci.yml  codeql.yml  project_auto_add.yml  project_fingerprint.yml  release.yml  release_dry_run.yml  roadmap_changelog_sync.yml
docs/: AGENT_OPERATING_PLAYBOOK.md  AGENT_ORIENTATION.md  API_CAPABILITY_AUDIT.md  ARRANGEMENT_FINDING.md  BACKLOG_RESEARCH.md  CHANGELOG.md  COMPRESSION_CALIBRATION_REPORT.md  ENGINEERING_STANDARDS.md  FIX_REPORT.md  GITHUB_PLANNING.md  MIXING_ROUTING_REPORT.md  NOTE_BRIDGE_SETUP.md  PHASE1A_REPORT.md  PHASE1B_REPORT.md  RELEASE_STRATEGY.md  SERUM_PROBE_FINDING.md  USER_GUIDE.md  VERIFICATION_HISTORY.md  VST_PROBE_FINDING.md  architecture.md  index.md  issue_project_fingerprint.md  senior_dev_audit_criteria.md
docs/agents/: development.md  github-playbook.md  index.md  knowledgebase-protocol.md  runtime-usage.md
docs/community/: contributing.md  support.md
docs/concepts/: api-capability-audit.md  default-safe-ux.md  safety-contract.md  senior-dev-audit-criteria.md
docs/engineering/: github-workflow-governance.md  standards.md  verification-history.md
docs/project/: CHANGELOG.github.md  ROADMAP.github.md
docs/user-guide/: index.md  prompts.md  setup.md  tool-reference.md  workflows.md
evals/: evals.json
fl_controller/FLStudioMCP/: device_FLStudioMCP.py
fl_controller/FLStudioPilot/: device_FLStudioPilot.py
fl_pyscripts/: MCP_Read_Probe.pyscript  MCP_Test_Chord.pyscript
knowledgebase/: MCP_TOOL_POLICY.md  README.md
knowledgebase/agent_notes/: PHASE1A_REPORT.md  PHASE1B_REPORT.md  decisions.md  learning_log.md  live_product_workflow_naming_smoke_macos_2026_06_07.json  live_product_workflow_naming_smoke_macos_2026_06_07.md  live_smoke_test_macos_2026_06_06.md  open_questions.md  verified_findings.md  video_extraction_assessment.md
knowledgebase/conversions/: compression_calibration.json  compression_calibration.md  db_mapping.json  eq_band_mapping.json  frequency_mapping.json  normalized_values.md
knowledgebase/fl_api/: arrangement_bounds.json  arrangement_bounds.md  midi_scripting_limits.md  mixer_eq.md  mixer_eq_calibration.json  mixer_eq_calibration_procedure.md  mixer_peak_measurement.json  mixer_peak_measurement.md  mixer_volume_calibration.json  mixer_volume_pan.md  plugin_parameters.md  rec_events.md  serum_probe.json  serum_probe.md  vst_probe.json  vst_probe.md
knowledgebase/known_pitfalls/: assign_to_free_mixer_track.md  channel_pattern_indexing.json  channel_pattern_indexing.md  controller_sysex_tempo_scaling.json  controller_sysex_tempo_scaling.md  electro_template_placeholder_routes.json  electro_template_placeholder_routes.md  fl_macos_python_limits.md  fruity_eq_ui_refresh.md  internal_eq_direct_wrappers.md  midi_export_partitioning.json  midi_export_partitioning.md  mixer_track_indexing.md  normalized_vs_real_units.md  parameter_ranges.md
knowledgebase/mastering/: mastering_boundaries.json  mastering_boundaries.md
knowledgebase/mcp/: agent_orientation_resource.json  agent_orientation_resource.md  batch_read_only_tool.json  batch_read_only_tool.md  channel_domain_tool.md  effect_plugin_domain_tools.json  effect_plugin_domain_tools.md  fls_pilot_breaking_rename.json  fls_pilot_breaking_rename.md  group_write_safety.json  group_write_safety.md  legacy_low_level_removal.json  legacy_low_level_removal.md  low_end_stereo_safety_assistant.json  low_end_stereo_safety_assistant.md  mixer_domain_tool.md  pattern_playlist_domain_tools.json  pattern_playlist_domain_tools.md  piano_roll_domain_tool.json  piano_roll_domain_tool.md  product_workflow_kb_policy_refactor.json  product_workflow_kb_policy_refactor.md  (+10 more)
scripts/: analyze_file.py  apply_source_trims_live.py  audit_anti_vibe.py  audit_tool_safety.py  calibrate_eq.py  calibrate_limiter.py  calibrate_proc3.py  calibrate_reverb_delay.py  check_github_project_fingerprint.py  check_release_tag.py  check_tool_registration_baseline.py  clean_repo.sh  extract_melody_file.py  fixture_hard_standardize_live.py  install_macos.sh  install_precommit_anti_vibe.py  install_windows.bat  mix_doctor_fix.py  normalize_template_dump.py  probe_arrangement.py  probe_crepe.py  probe_documented_api_live.py  probe_harden.py  probe_mix_snapshot.py  probe_native_eq_type_live.py  probe_peaks.py  probe_serum.py  probe_serum_presets.py  probe_timings.py  probe_vst.py  render_github_changelog.py  render_github_roadmap.py  run_live_capability_sweep.py  run_mix_doctor.py  run_setup_doctor.py  test_arrange_mechanic.py  test_audio_analysis.py  test_autoopen.py  test_bridge.py  test_bridge_mock.py  (+44 more)
tests/: test_agent_briefing_resource.py  test_arrange_mechanic.py  test_audio_analysis.py  test_autoopen.py  test_batch_persistent_writes.py  test_batch_read_only.py  test_bridge.py  test_bridge_mock.py  test_bulk.py  test_chains.py  test_change_history.py  test_channel_domain.py  test_channel_organizer.py  test_channel_target.py  test_color.py  test_compose.py  test_compression_intents.py  test_control_center.py  test_control_center_static.py  test_dynamic_mixer_targets.py  test_effect_plugin_domain.py  test_effects_pattern_extensions.py  test_group_tracks.py  test_kb_policy.py  test_knowledgebase.py  test_level_aware.py  test_melody_extract.py  test_midi_export.py  test_mix_doctor.py  test_mixer.py  test_mixer_domain.py  test_mixing_intents.py  test_operation_registry.py  test_pattern_playlist.py  test_pattern_playlist_domain.py  test_phase1a.py  test_phase1a_write.py  test_phase1b.py  test_phase1b_mcp.py  test_phase1b_tools.py  (+25 more)
(+190 files in other folders)
