[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-studio-mcp"
version = "0.3.0"
description = "MCP server that controls FL Studio via a MIDI SysEx bridge to FL's Python scripting API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Paper Kasu Productions", email = "" },
]
requires-python = ">=3.10"
keywords = ["mcp", "fl-studio", "music-production", "ai", "claude", "fruityloops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.7.0",
    "mido>=1.3.2",
    "python-rtmidi>=1.5.8",
    "pyautogui>=0.9.54",      # piano-roll script trigger (Ctrl+Alt+Y)
    "pygetwindow>=0.0.9",     # (Windows focus helper)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
fl-studio-mcp = "fl_studio_mcp.server:main"
fl-studio-mcp-daemon = "fl_studio_mcp.daemon:main"

[project.urls]
Homepage = "https://github.com/paper-kasu/flstudio-mcp"
Issues = "https://github.com/paper-kasu/flstudio-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fl_studio_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
