[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-studio-mcp"
version = "1.0.0"
description = "AI-powered FL Studio control via MCP - mixing, composition, plugin control, and mix diagnosis through natural language"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "rosasynthesiz" },
]
requires-python = ">=3.10"
keywords = ["mcp", "fl-studio", "music-production", "ai", "claude", "fruityloops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.7.0",
    "mido>=1.3.2",
    "python-rtmidi>=1.5.8",
    "pyautogui>=0.9.54",      # piano-roll script trigger
    "pygetwindow>=0.0.9; sys_platform == 'win32'",  # Windows focus helper
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
# Audio analysis (Integration 2/3). Needs ffmpeg on PATH for MP3 decoding.
audio = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.10",
]
# Higher-accuracy melody/pitch via CREPE (torchcrepe). HEAVY: pulls torch
# (~500MB on disk, slower on CPU). Install ALONGSIDE [audio], e.g.
#   pip install -e .[audio,audio-accurate]
# Without it, fl_extract_melody falls back to the lighter pyin engine.
audio-accurate = [
    "torch>=2.0",
    "torchcrepe>=0.0.23",
]

[project.scripts]
fl-studio-mcp = "fl_studio_mcp.server:main"
fl-studio-mcp-daemon = "fl_studio_mcp.daemon:main"

[project.urls]
Homepage = "https://github.com/rosasynthesiz/flstudio-mcp"
Repository = "https://github.com/rosasynthesiz/flstudio-mcp"
Issues = "https://github.com/rosasynthesiz/flstudio-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fl_studio_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
