[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fls-pilot"
version = "3.0.0a1"
description = "Control FL Studio with any MCP-compatible LLM: mixing, composition, and mix diagnosis through natural language."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "rosasynthesiz" },
]
maintainers = [
    { name = "thunderdew-dawn" },
]
requires-python = ">=3.10"
keywords = ["mcp", "fl-studio", "music-production", "ai", "claude", "fruityloops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.7.0",
    "mido>=1.3.2",
    "python-rtmidi>=1.5.8",
    "pyautogui>=0.9.54",      # piano-roll script trigger (Ctrl+Alt+Y / Cmd+Opt+Y)
    "pygetwindow>=0.0.9; sys_platform == 'win32'",  # Windows focus helper (unused on macOS)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
]
# Audio analysis (Integration 2/3). Needs ffmpeg on PATH for MP3 decoding.
audio = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.10",
]
# Higher-accuracy melody/pitch via CREPE (torchcrepe). HEAVY: pulls torch
# (~500MB on disk, slower on CPU). Install ALONGSIDE [audio], e.g.
#   pip install -e .[audio,audio-accurate]
# Without it, fl_extract_melody falls back to the lighter pyin engine.
audio-accurate = [
    "torch>=2.0",
    "torchcrepe>=0.0.23",
]

[project.scripts]
fls-pilot = "fls_pilot.server:main"
fls-pilot-daemon = "fls_pilot.daemon:main"

[project.urls]
Homepage = "https://github.com/thunderdew-dawn/fls-pilot"
Repository = "https://github.com/thunderdew-dawn/fls-pilot"
Issues = "https://github.com/thunderdew-dawn/fls-pilot/issues"
Upstream = "https://github.com/rosasynthesiz/flstudio-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/fls_pilot"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["UP031"]
"tests/**/*.py" = ["UP031"]

[tool.pytest.ini_options]
addopts = """
  --ignore=scratch
  --ignore=tests/test_autoopen.py
  --ignore=tests/test_channel_target.py
  --ignore=tests/test_compression_intents.py
  --ignore=tests/test_mixing_intents.py
  --ignore=tests/test_reverb_delay_intents.py
  --ignore=tests/test_route_write.py
  --ignore=tests/test_routing_read.py
  --ignore=tests/test_audio_analysis.py
  --ignore=tests/test_melody_extract.py
  --ignore=tests/test_reference_match.py
  --ignore=scripts/probes/test_priority12_live.py
"""
norecursedirs = ["scratch", ".venv", ".git", ".pytest_cache", ".ruff_cache"]
